--- a/my.cnf
+++ b/my.cnf
@@ -1,6 +1,7 @@
 [mysqld]
 max_allowed_packet = 100M
 innodb_buffer_pool_size=100M
+explicit_defaults_for_timestamp=true
 max_connections=50
 bind-address=0.0.0.0
 #解决不监听ipv4
